# OOP_5

./: pyproject.toml
program/: indiv_2.py
src/: ind.py  t.py
tests/: test_ind.py
